Funcionamiento completo de los CRUD de peliculas y usuarios con autenticacion.
