# routes/user.js
@@ -1,5 +1,6 @@
 const { response } = require('express');
 const express = require('express');
+const userController = require('../controllers/user');
 
 const router = express.Router();
 
@@ -8,7 +9,7 @@ router.post('/signup',
     #swagger.tags = ['Usuarios']
     #swagger.summary = 'Registra un usuario.'   
 */
-    (req, res) => { console.log('Sign up user'); return res.status(200).send(""); }
+    userController.signup
 );
 
 router.post('/login',
@@ -16,7 +17,7 @@ router.post('/login',
     #swagger.tags = ['Usuarios']
     #swagger.summary = 'Obtiene la lista de peliculas.'   
 */
-    (req, res) => console.log('Log in')
+    userController.login
 );
 
 module.exports = router;
