# swagger_output.json
@@ -2,13 +2,27 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "API Rest de gestión de películas",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:3002",
   "basePath": "/",
   "schemes": [
-    "http"
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "api_key",
+      "in": "header"
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/api/v1/movies/": {
@@ -18,7 +32,13 @@
         ],
         "summary": "Obtiene la lista de peliculas.",
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {}
       },
       "post": {
@@ -27,7 +47,13 @@
         ],
         "summary": "Crear una nueva pelicula.",
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {}
       },
       "put": {
@@ -36,16 +62,13 @@
         ],
         "summary": "Actualiza una pelicula.",
         "description": "",
-        "parameters": [],
-        "responses": {}
-      },
-      "delete": {
-        "tags": [
-          "Peliculas"
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
         ],
-        "summary": "Elimina una película.",
-        "description": "",
-        "parameters": [],
         "responses": {}
       }
     },
@@ -62,6 +85,32 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "tags": [
+          "Peliculas"
+        ],
+        "summary": "Elimina una película.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {}
@@ -75,11 +124,7 @@
         "summary": "Registra un usuario.",
         "description": "",
         "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": {}
       }
     },
     "/api/v1/users/login": {
@@ -92,6 +137,58 @@
         "parameters": [],
         "responses": {}
       }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "mi.email@gmail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "1234"
+        },
+        "firstName": {
+          "type": "string",
+          "example": "Marcos"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "Nunez"
+        }
+      }
+    },
+    "Movie": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "Edge of Tomorrow"
+        },
+        "runtimeMinutes": {
+          "type": "number",
+          "example": 128
+        },
+        "rating": {
+          "type": "number",
+          "example": 9
+        }
+      }
+    }
+  },
+  "User": {
+    "signup": {
+      "$email": "mi.email@gmail.com",
+      "$password": "1234",
+      "$firstName": "Marcos",
+      "$lastName": "Nunez"
+    },
+    "Login": {
+      "$email": "mi.email@gmail.com",
+      "$password": 1234
     }
   }
 }
